[gd_scene load_steps=4 format=3 uid="uid://bpxb6kag1fyti"]

[ext_resource type="Script" uid="uid://doy4m1udqhewr" path="res://scripts/main.gd" id="1_0wfyh"]
[ext_resource type="Texture2D" uid="uid://ckia8crwcqkgb" path="res://assets/bg.png" id="1_o5qli"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o5qli"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[node name="Main" type="Node"]
script = ExtResource("1_0wfyh")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_o5qli")

[node name="ConveyorItemsContainer" type="Node2D" parent="Control"]

[node name="SpawnMarker" type="Marker2D" parent="Control/ConveyorItemsContainer"]
position = Vector2(203, 718)
gizmo_extents = 25.0

[node name="SoldHorizonlalMarker" type="Marker2D" parent="Control/ConveyorItemsContainer"]
position = Vector2(1711, 712)
gizmo_extents = 25.0

[node name="Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -167.0
offset_top = 276.0
offset_right = 175.0
offset_bottom = 374.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Click!"

[node name="PipesFixBUtton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -606.0
offset_top = -307.0
offset_right = -510.0
offset_bottom = -197.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Click!"

[node name="FuseMInigame" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 473.0
offset_top = -62.0
offset_right = 569.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Fix!"

[node name="ValveFixMinigame" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = -403.0
offset_right = 39.0
offset_bottom = -293.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Fix!"

[node name="BreakTimer" type="Timer" parent="Control/ValveFixMinigame"]
autostart = true

[node name="MinigameOverlays" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Fuse" type="Panel" parent="Control/MinigameOverlays"]
visible = false
custom_minimum_size = Vector2(1440, 810)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -270.0
offset_right = 480.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o5qli")

[node name="Label" type="Label" parent="Control/MinigameOverlays/Fuse"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Fuse"

[node name="Valve" type="Panel" parent="Control/MinigameOverlays"]
visible = false
custom_minimum_size = Vector2(1440, 810)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -270.0
offset_right = 480.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o5qli")

[node name="Label" type="Label" parent="Control/MinigameOverlays/Valve"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Valve todo"

[node name="Pipes" type="Panel" parent="Control/MinigameOverlays"]
visible = false
custom_minimum_size = Vector2(1440, 810)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -270.0
offset_right = 480.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o5qli")

[node name="Label" type="Label" parent="Control/MinigameOverlays/Pipes"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Pipes todo"

[node name="Electicity" type="Panel" parent="Control/MinigameOverlays"]
visible = false
custom_minimum_size = Vector2(1440, 810)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -270.0
offset_right = 480.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o5qli")

[node name="Label" type="Label" parent="Control/MinigameOverlays/Electicity"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Lecy todo
"

[node name="MoneyLabel" type="Label" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 32
text = "Money: 0"

[connection signal="pressed" from="Control/Button" to="." method="_request_product_click"]
[connection signal="pressed" from="Control/PipesFixBUtton" to="." method="_on_pipes_fix_b_utton_pressed"]
[connection signal="pressed" from="Control/FuseMInigame" to="." method="_on_fuse_m_inigame_pressed"]
[connection signal="pressed" from="Control/ValveFixMinigame" to="." method="_on_valve_fix_minigame_pressed"]
